--- a/index.html
+++ b/index.html
@@ -4,3 +4,24 @@ author_profile: true
 header:
     image: "assets/images/header.jpg"
 ---
+
+<!-- <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+
+<script>
+    particlesJS.load('particles-js', 'assets/json/particlesjs-config.json', function() {
+    console.log('callback - particles.js config loaded');
+    });
+</script>
+ -->
+
+<h2>Welcome to my projects portfolio!</h2>
+
+<p style="font-size: 11pt;line-height: 1.6 !important;margin-bottom: 5em;">
+    Here is a list of different projects I have worked on, all related to Data Science as a whole. You will therefore find projects on Data Analysis, Data Visualization, as well as Machine Learning, Deep Learning, and even Natural Language Processing.
+    <br>
+    <br>
+    Some are projects I have realized during my studies as part of a class, but most are personal projects on which I have worked on using ideas and examples from online projects, or personal ideas.
+    <br>
+    <br>
+    This page is above all a personal reference point that allows me to keep track of the different things I have worked on znd group them together. Each of them refers to a Github repo, so feel free to take a look around, and use all the resources available for your own projects! 🙂
+</p>
