--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ author_profile: true
 </script>
  -->
 
-<h2>Welcome to my projects portfolio!</h2>
+<!-- <h2>Welcome to my projects portfolio!</h2>
 
 <p style="font-size: 11pt;line-height: 1.6 !important;margin-bottom: 5em;">
     Here is a list of different projects I have worked on, all related to Data Science as a whole. You will therefore find projects on Data Analysis, Data Visualization, as well as Machine Learning, Deep Learning, and even Natural Language Processing.
@@ -22,4 +22,4 @@ author_profile: true
     <br>
     <br>
     This page is above all a personal reference point that allows me to keep track of the different things I have worked on znd group them together. Each of them refers to a Github repo, so feel free to take a look around, and use all the resources available for your own projects! 🙂
-</p>
+</p> -->
